Fix page and notification overlap
ISSUE PLCR1801-83

--- a/src/resources/css/packlink-core-override.css
+++ b/src/resources/css/packlink-core-override.css
@@ -1,3 +1,7 @@
+#pl-page {
+	margin-top: 5px;
+}
+
 #pl-page .pl-form-group select.pl-with-label {
 	padding: 7px 0 0 15px;
 	max-width: none;
